# example-autotools-lib

./: .gitignore  Makefile.am  README.md  configure.ac
src/: europa.cpp  jupiter.cpp  jupiter.h
